overflow fix

--- a/blocks/elements/element/__like/element__like.css
+++ b/blocks/elements/element/__like/element__like.css
@@ -3,6 +3,9 @@
     background-color: white;
     width: 21px;
     height: 19px;
+    align-self: center;
+    margin-right: 17px;
+
 }
 
 
