--- a/blocks/elements/element/__name/element__name.css
+++ b/blocks/elements/element/__name/element__name.css
@@ -4,13 +4,11 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29.05px;
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    width: 271px;
     text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-left: 15px;
+
 
 }
 
